--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo</title>
     <style>
-        body {
-            height: 98vh;
-            background-color: black;
+        body {            
+            height: 100vh;           
+            /*background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-position: center ;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+            background: black url(images/wallpaper002.jpg) center no-repeat fixed ;
+            background-size: cover;
         }
-        main {
+            
+        main {           
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
