--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -10,6 +10,7 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;           
         }
         td {
@@ -17,11 +18,10 @@
             border: 1px, solid, black;
             padding: 4px;
             text-align: center;
+            vertical-align: middle;
         }
 
-        #a1 {
-            background-color: yellow;
-        }
+      
     </style>
 </head>
 <body>
@@ -29,7 +29,7 @@
     <code>
         <table>
             <tr >
-                <td id="a1">A1</td>
+                <td>A1</td>
                 <td>B1</td>
                 <td>C1</td>
             </tr>
