--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -246,8 +246,8 @@
             </tr>
         </tbody>
         <tfoot> 
-            <td></td>          
-            <th scope="row">Total de Habitantes</th>
+                     
+            <th colspan="2" scope="row">Total de Habitantes</th>
             <td class="num">212 583 720</td>
             <td class="percent">100%</td>
         </tfoot>
