--- a/Exercicios/ex023/tabela003.html
+++ b/Exercicios/ex023/tabela003.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        table {
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
+        }
+        td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1> Mesclagem de tabelas</h1>
+    <table>
+        <tr>
+            <td rowspan="3" style="width: 25px;">A</td>
+            <td colspan="8" style="height: 50px;">B</td>
+            <td rowspan="3" style="width: 25px;">C</td>
+        </tr>
+        <tr>
+            <td rowspan="2" style="width: 25px;">D</td>
+            <td rowspan="2"
+             style="width: 25px;">E</td>
+            <td rowspan="2" style="width: 25px;">F</td>
+        </tr>
+        <tr>
+            <td rowspan="" style="width: 25px;">G</td>
+            <td colspan="" style="width: 25px;">H</td>
+            <td style="width: 25px;">I</td>
+        </tr>
+    </table>
 </body>
 </html>
