--- a/Exercicios/ex024/iframe001.html
+++ b/Exercicios/ex024/iframe001.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de iframe</title>
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+        }
+    </style>
 </head>
 <body>
     <h1>
-        testando o uso de um iframe
+        Testando o uso de um iframe
     </h1>
     <p>
-        Acessando o site do <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe> para aprender a programar!
+        Acessando o site <iframe src="https://www.cursoemvideo.com/" frameborder="0" scrolling="no"> do <a href="https://www.cursoemvideo.com/">Cursoemvídeo</a> </iframe> para aprender a programar!
+    </p>
+    <p>
+        O repositório do Guanabara <iframe src="https://gustavoguanabara.github.io/" frameborder="0"><a href="https://gustavoguanabara.github.io/">aqui</a></iframe>também é legal
     </p>
 </body>
 </html>
