--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae at eveniet laboriosam quae dolore reprehenderit mollitia obcaecati expedita quidem, nemo, omnis deleniti suscipit voluptatem possimus eligendi, et consectetur laborum dolor.
     Ratione nostrum doloremque consectetur velit dolores, distinctio natus dolore ut obcaecati dolorem quos rerum animi eveniet nesciunt quas quis neque explicabo, eaque minus sed sint sunt sequi labore. Quod, magni?</p>
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0">
+        <p>Erro!!Infelizmente seu navegador nao é compatível...</p>
+    </iframe>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fugiat, velit eveniet aliquam accusamus error consectetur. Nisi animi delectus quam, voluptate deleniti quisquam quae consectetur amet! Eveniet eos optio tenetur!
     Blanditiis id recusandae earum eos veniam voluptatibus quos, et eum rem in assumenda aliquid natus, ad, doloremque facilis dolor delectus consequuntur omnis iste amet porro cupiditate deserunt? Deserunt, blanditiis iste.</p>
 </body>
