--- a/Exercicios/ex024/iframe004.html
+++ b/Exercicios/ex024/iframe004.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et aliquid, ullam repudiandae praesentium laboriosam doloribus nostrum ipsum numquam, ducimus sunt odio fuga ea? Asperiores rem qui et quia nesciunt officia?</p>
-    <iframe src="paginas-extras/pag004.html" sandbox="sandbox">
+    <iframe src="paginas-extras/pag004.html" sandbox="allow-same-origin">
         Seu navegador não é compatível com isso
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eum porro unde minus perspiciatis consequatur corrupti, incidunt est cumque impedit, debitis suscipit error, qui eveniet voluptatibus quidem assumenda. Ipsam, in.</p>
