--- a/Exercicios/ex025/form005.html
+++ b/Exercicios/ex025/form005.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Input</title>
 </head>
 <body>
-    <h1> Exemplos de Formulário com checkabox e radio button</h1>
+    <h1>Checkabox e Radio button</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Sexo</legend>
