--- a/Exercicios/ex025/form004.html
+++ b/Exercicios/ex025/form004.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Input</title>
 </head>
 <body>
-    <h1>Formulários com email e telefone</h1>
+    <h1>Email e Telefone</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Dados pessoais</legend>
