--- a/Exercicios/ex025/form006.html
+++ b/Exercicios/ex025/form006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Input</title>
 </head>
 <body>
     <h1>Color, Range e File</h1>
