--- a/Exercicios/ex025/form007.html
+++ b/Exercicios/ex025/form007.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Select,datalist e textarea</h1>
-    <form action="cadastro.php"  method="get" autocomplete="on">
+    <form action="cadastro.php"  method="post" autocomplete="on">
         <p>
             <label for="iest">Estado</label>
             <select name="estado" id="iest">
@@ -37,6 +37,7 @@
         <p>
             <label for="imsg">Mensagem:</label> <br>
             <textarea name="msg" id="imsg" placeholder="Deixe aqui sua mensagem..."></textarea> 
+            text
         </p>
         <p>
             <input type="submit" value="Enviar">
