--- a/Exercicios/ex026/mq004/index.html
+++ b/Exercicios/ex026/mq004/index.html
@@ -6,6 +6,13 @@
     <title>Media Query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando media queries</h1>
+        <img src="images/icon-phone.png" alt="Versão para smartphone">
+        <img src="images/icon-tablet.png" alt="Versão para tablet">
+        <img src="images/icon-print.png" alt="Versão para impressão">
+        <img src="images/icon-pc.png" alt="Versão para desktop">
+        <img src="images/icon-tv.png" alt="Versão para TV">
+    </main>
 </body>
 </html>
