--- a/Exercicios/ex026/mq004/index.html
+++ b/Exercicios/ex026/mq004/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="styles/style.css" media="all">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <main>
         <h1>Testando media queries</h1>
-        <img src="images/icon-phone.png" alt="Versão para smartphone">
-        <img src="images/icon-tablet.png" alt="Versão para tablet">
-        <img src="images/icon-print.png" alt="Versão para impressão">
-        <img src="images/icon-pc.png" alt="Versão para desktop">
-        <img src="images/icon-tv.png" alt="Versão para TV">
+        <img id="phone" src="images/icon-phone.png" alt="Versão para smartphone">
+        <img id="tablet" src="images/icon-tablet.png" alt="Versão para tablet">
+        <img id="print" src="images/icon-print.png" alt="Versão para impressão">
+        <img id="pc" src="images/icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="images/icon-tv.png" alt="Versão para TV">
     </main>
 </body>
 </html>
