--- a/Exercicios/ex027/flex003/index.html
+++ b/Exercicios/ex027/flex003/index.html
@@ -10,6 +10,11 @@
             height: 100px;
             width: 700px;
             display: flex;   
+            /*  
+               Shorthand para
+            flex-direction: row; 
+            flex-wrap: nowrap;      
+            */
             flex-flow: column wrap;  
         }
 
