--- a/Exercicios/ex027/flex005/index.html
+++ b/Exercicios/ex027/flex005/index.html
@@ -8,26 +8,27 @@
         div.conteiner {            
             background-color: aqua;
             display: flex;
-            flex-flow: row wrap;
-            justify-content: center;
+            flex-flow: row nowrap;       
+            justify-content: flex-start;
         }
 
         div.item {
             background-color: blanchedalmond;           
             border: 1px solid black;
             text-align: center;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
     <div class="conteiner">
-        <div class="item">Caixa Filho |A| </div>
-        <div class="item">Caixa Filho |B| </div>
-        <div class="item">Caixa Filho |C| </div>
-        <div class="item">Caixa Filho |D| </div>
-        <div class="item">Caixa Filho |E| </div>
-        <div class="item">Caixa Filho |F| </div>
-        <div class="item">Caixa Filho |G| </div>        
+        <div class="item">A</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
+        <div class="item">F</div>
+        <div class="item">G</div>        
     </div>
 </body>
 </html>
