--- a/Exercicios/ex027/flex002/index.html
+++ b/Exercicios/ex027/flex002/index.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <h1>Flex Direction</h1>
     <div class="conteiner">
         <div class="item">A</div>
         <div class="item">B</div>
