--- a/Exercicios/ex027/flex003/index.html
+++ b/Exercicios/ex027/flex003/index.html
@@ -12,8 +12,8 @@
             display: flex;   
             /*  
                Shorthand para
-            flex-direction: row; 
-            flex-wrap: nowrap;      
+               flex-direction: row; 
+               flex-wrap: nowrap;      
             */
             flex-flow: column wrap;  
         }
@@ -27,6 +27,12 @@
     </style>
 </head>
 <body>
+    <h1>Flex Wrap e Shorthand</h1>
+    <p>
+        Shorthand para: <br>
+        flex-direction: row; <br> 
+        flex-wrap: nowrap; 
+    </p>
     <div class="conteiner">
         <div class="item">Exemplo de Bloco A</div>
         <div class="item">Exemplo de Bloco B</div>
