--- a/Exercicios/ex027/flex004/index.html
+++ b/Exercicios/ex027/flex004/index.html
@@ -15,8 +15,8 @@
             background-color: aqua;
             display: flex;
             height: 300px; /* Para align itens o contêiner pai precisa de altura*/
-            flex-flow: row wrap;
-            justify-content: center;
+            flex-flow: row-reverse nowrap;
+            justify-content: space-evenly;
             align-items: center;
         }
 
