--- a/Exercicios/ex027/flex005/index.html
+++ b/Exercicios/ex027/flex005/index.html
@@ -3,32 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexible Box</title>
+    <title>Flexbox centralizado</title>
     <style>
-        div.conteiner {            
-            background-color: aqua;
-            display: flex;
-            flex-flow: row nowrap;       
-            justify-content: flex-start;
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
         }
-
-        div.item {
-            background-color: blanchedalmond;           
-            border: 1px solid black;
-            text-align: center;
-            padding: 10px;
+        body,html {
+            height: 100vh;
+            width: 100vw;
+            background-color: lightsalmon;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+        }
+        main {
+            background-color: lightgreen;
+            height: 90vh;
+            width: 90vw;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+        }
+        section {
+            background-color: lightseagreen;
+            height: 200px;
+            width: 200px;
         }
     </style>
 </head>
 <body>
-    <div class="conteiner">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>        
-    </div>
+    <main>
+        <section>
+            <h1>Tela de Login</h1>
+        </section>
+    </main>
 </body>
 </html>
