--- a/Exercicios/ex027/flex012/index.html
+++ b/Exercicios/ex027/flex012/index.html
@@ -27,9 +27,10 @@
 
         div#cxb {
          /* flex-grow: 0;      */
-         /* flex-shrink: 0;    */
-         /* flex-basis: 300px; */
-            flex: 0 0 300px ;
+         /* flex-shrink: 1;    */
+         /* flex-basis: auto; */
+         /* flex: 0 1 auto ; */
+            flex: initial;
         }
 
         div#cxc {
